style.css
* {
  padding: 0;
  margin: 0;
}

.area {
  margin: 10px auto;
  display: block;
  width: 600px;
  height: 500px;
}

canvas {
  background: #166837;
  position: absolute;
  width: 600px;
  height: 500px;
}

.card-one, .card-two, .card-three, .card-four, .card-five, .deal-one, .deal-two, .deal-three, .deal-four, .deal-five {
  height: 87px;
  width: 60.5px;
  border: 3px solid #288e51;
  border-radius: 3px;
  display: inline-block;
}

img {
  height: 90px;
}

.dealer-cards {
  position: relative;
  top: 20px;
  left: 231.5px;
}

.dealer-twists {
  position: relative;
  top: 30px;
  left: 196px;
}

.user-cards {
  position: relative;
  top: 84px;
  left: 231.5px;
}

.user-twists {
  position: relative;
  top: 74px;
  left: 196px;
}

button#deal {
  border-radius: 100%;
  padding: 30px;
  font-size: 14px;
  margin: 0 10px;
  background-color: red;
  color: #fff;
  outline: none;
}

button#deal:active {
  background-color: #ff0000bf;
  outline: none;
  border-color: #fff;
}

input[value="Hit me!"], input[value="Stick"] {
  border-radius: 20px;
  background-color: #1b90e2;
  color: #fff;
  width: 70px;
  padding: 10px;
  outline: none;
}

input[value="Hit me!"]:active, input[value="Stick"]:active {
  outline: none;
  background-color: #3c9ce0;
  border-color: #fff;
}

.text-box {
  max-width: 600px;
  margin: 0 auto;
  height: 40px;
}

.text-box p {
  display: inline-block;
}

.text-box a {
  float: right;
  background-color: green;
  color: #fff;
  padding: 10px;
  text-decoration: none;
  border-radius: 5px;
}

.dealt-cards {
  max-width: 600px;
  margin: 0 auto;
  text-align: center;
}

footer {
  padding: 10px;
  text-align: center;
}

#attribution {
  display: inline-block;
}

